# lamp-simulator

./: CMakeLists.txt  README.md  lamp_simulator.ioc
Inc/: main.h
Src/: main.c
